# alempie

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
postgres/backup/: alempie.sql
postgres_init/: init.sql
src/alempie/: config.py  crud.py  database.py  database_old.py  debug.py  main.py  test_db.py
src/alempie/migrations/: env.py
src/alempie/migrations/versions/: 16d3ed6cd203_int_v8.py  3081ee2977b7_departmentsv2.py  63f1f039589c_departmentsv4.py  6e75521b1526_initial_schema.py  a470bb389c56_departments.py  ac61df887119_departmentsv3.py  ffc01471811c_initial_migration.py
src/alempie/models/: __init__.py  account.py  department.py
src/alempie/static/css/: style.css
src/alempie/templates/: base.html
src/alempie/templates/accounts/: index.html
src/alempie/templates/departments/: index.html
src/alempie/templates/home/: index.html
